# lite.ai.toolkit

./: .gitignore  CMakeLists.txt  README.md  YOLO12_PROJECT_SUMMARY.md  build.sh
.github/workflows/: copilot-instructions.md
cmake/: cmake_uninstall.cmake.in  lite.ai.toolkit.cmake.in  onnxruntime.cmake  opencv.cmake  tensorrt.cmake  utils.cmake
docs/: yolo12_quickstart.md  yolo12_support.md  yolo12_tensorrt_nms_guide.md  yolo26_obb_implementation_summary.md  yolo26_obb_quickstart.md  yolo26_obb_support.md
examples/lite/: CMakeLists.txt
examples/lite/cv/: test_lite_yolo12.cpp  test_lite_yolo12_trt.cpp  test_lite_yolo26_obb.cpp  test_lite_yolov11.cpp
lite/: config.h  models.h  types.h  utils.cpp  utils.h
lite/mnn/cv/: mnn_yolo12.cpp  mnn_yolo12.h
lite/ncnn/cv/: ncnn_yolo12.cpp  ncnn_yolo12.h
lite/ort/cv/: yolo12.cpp  yolo12.h  yolo26_obb.cpp  yolo26_obb.h
lite/tnn/cv/: tnn_yolo12.cpp  tnn_yolo12.h
lite/trt/core/: trt_core.h  trt_defs.h  trt_handler.cpp  trt_utils.cpp
lite/trt/cv/: trt_yolo12.cpp  trt_yolo12.h  trt_yolo26_obb.cpp  trt_yolo26_obb.h  trt_yolov11.cpp  trt_yolov11.h  trt_yolov8_obb.cpp  trt_yolov8_obb.h
